2012-12-05 Romain Francois <romain@r-enthusiasts.com>

        * src/cache.cpp: added get_cache
        * include/Rcpp/hash/IndexHash.h: use a cached integer vector for
        the hash table payload. The cache vector increases as needed. 
        
2012-12-05  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: use code generation for compileAttributes
        * src/AttributesGen.cpp: use code generation for compileAttributes
        * src/AttributesGen.h: use code generation for compileAttributes
        * src/Module.cpp: fix typo in GetCppCallable

2012-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/hash/hash.h: Added include inttypes.h for intptr_t

2012-12-04  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use simple code generation for sourceCpp
        * src/Attributes.cpp: move generators into their own source file;
        use simple code generation for sourceCpp
        * src/AttributesGen.cpp: move generators into their own source file;
        add C++ default argument parsing
        * src/AttributesGen.h: move generators into their own source file
        * src/AttributesParser.cpp: move generators into their own source file
        * src/AttributesParser.h: move generators into their own source file
        * src/AttributesTypes.h: new header for attributes types
        * src/AttributesUtil.h: new header for attributes utilities

2012-12-04 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/hash/hash.h: new implementation of IndexHash, based on
	Simon's fastmatch package
        * include/Rcpp/sugar/functions/match.h: more efficient version of match
        using new IndexHash
        * include/Rcpp/sugar/functions/unique.h: more efficient version of
	unique and in using IndexHash
        * include/Rcpp/sugar/functions/duplicated.h: more efficient version
	of duplicated and in using IndexHash
        * include/Rcpp/sugar/functions/self_match.h: more efficient version